--- a/art.html
+++ b/art.html
@@ -10,33 +10,44 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title class="text-info">African Fabric</title>
   </head>
-<body id="bgimg1">
-<div>
-<section>
- <div class="col inline-block">
-     <nav class=" row  navbar navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-       <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
+<header>
+<div class="col inline-block">
+     <nav class=" row fixed navbar navbar-light bg-light">
+  <a class="navbar-brand justify-content-end" href="index.html">
+    <img  src="assets/images/mamam.png" width="160" height="160" HOME alt="" loading="lazy" id="mama"></i>
    </a>
-     <div>
+   <section>
+    <div>
          <div>
-               <strong><span>
+               <span>
                  <ul class="nav justify-content-end">
                    <li class="nav-item">
-                   <a class="nav-link active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
+                   <a class="nav-link active active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
                       </li>
+                      <li class="nav-item">
+                    <a class="nav-link active btn" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                       </li>
                      <li class="nav-item">
                     <a class="nav-link active btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
-                    <li>
+                       </li>
+                        <li class="nav-item">
+                     <a class="nav-link btn " title="Tooltip" href="contact.html" class="hvr-sweep-to-bottom"><strong>Contact us</strong></a>
+                    </li>
                      </ul>
-               </span></strong>
+               
+               </span>
          </div>
     </div>
+   
    </nav>
-<div> 
+<div>
+</header>
+<div class="background-image" id="bgimg1">
+<div>
+    <div>
        <h5 class="mt-0 mb-1">Wall Art</h5>
-    <p class="text-light"> This image shows different pieces of artwork painted on the african fabric.</p>
-    
+       <p class="text-light"> This image shows different pieces of artwork painted on the african fabric.</p>
+    </div>
  <div>
       <div class="col">
           <div col-6>
