--- a/fabricuses.html
+++ b/fabricuses.html
@@ -13,77 +13,77 @@
   </head>
   <body id="bgimg1">
   <section>
-<div class="row container-fluid">
-
-      <div class="col inline-block">
-     <nav class=" row  navbar navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-      <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
+<header>
+<div class="col inline-block">
+     <nav class=" row fixed navbar navbar-light bg-light">
+  <a class="navbar-brand justify-content-end" href="index.html">
+    <img  src="assets/images/mamam.png" width="160" height="160" HOME alt="" loading="lazy" id="mama"></i>
    </a>
-   <div>
+   <section>
+    <div>
          <div>
                <span>
                  <ul class="nav justify-content-end">
+                   <li class="nav-item">
+                   <a class="nav-link active active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
+                      </li>
+                      <li class="nav-item">
+                    <a class="nav-link active btn" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                       </li>
                      <li class="nav-item">
-                    <a class="nav-link btn active" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                    <a class="nav-link active btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
                        </li>
-                       <li class="nav-item">
-                    <a class="nav-link btn active" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
-                       </li>
+                        <li class="nav-item">
+                     <a class="nav-link btn " title="Tooltip" href="contact.html" class="hvr-sweep-to-bottom"><strong>Contact us</strong></a>
+                    </li>
                      </ul>
                
                </span>
          </div>
     </div>
+   
    </nav>
-
- </div>
- <div class="mt-0-1 vh">
+<div>
+</header>
+<div class=" wrapper background-image inline block" id="bgimg1">  
+ <div class=" container mt-0-1 vh">
   <h5 class="wrapper mt-0 mb-1 text-light"> Batik fabrics</h5>
-    <img class="mr-3" src="assets/images/d1.png" alt="...">
-     <p class="text-light">This image shows diffent types of fabric prints.
-     In the Eastern part of Africa call it is Chitenge/ Kitenge. 
-    Kenya, Uganda, Tanzania, Sudan, In the western part of Africa wear Ankara. 
-    Nigeria, Cameroon, Ghana, Senegal, Liberia, Rwanda, and Democratic Republic of the Congo.
+    <img class="mr-3" src="assets/images/d1.png">
+     <p class="text-light">
+     An image of different types of fabric prints Worn in different parts of Africa.
     </p>
-    </div>
 
-<div class="mt-0-1 vh">
-  <h5 class="wrapper mt-0 mb-1 text-light"> Early stages of batik fabric</h5>
-    <img class="mr-3" src="assets/images/d2.png" alt="...">
-     <p class="text-light"> In this image we see women in the village preparing color that will be used to print the batik fabric..
+   <div class="mt-0-1 vh">
+    <li class="container inline-block">
+    <h5 class="mt-0 mb-1 text-light"> Early stages of batik fabric</h5>
+    <img class="mr-3" src="assets/images/d2.png">
+     <p class="text-light"> The image above is a picture taken in the village of women during the early preparations of the batik fabric.
     </p>
-    </div>
-
-    </div>
-  </li>
+    </li>
    <li class="mt-0-1 vh">
     <h5 class="wrapper mt-0  mb-1 text-light">Clothes designs</h5>
     <img class="mr-3" src="assets/images/d3.png" alt="placeholder image">
     <p class="text-light">  On occasions and in many ways either symbolically or for practical reasons. 
-     Chitenges are used in different settings to convey messages. The following list 
-     demonstrates uses of the cloths</p>
-     </div>
-  </li>
-  <li class="mt-0-1 vh">
+     Chitenges are used in different settings to convey messages. This image shows different use of the fabric like making clothes.</p>
+    </li>
+    <li class="mt-0-1 vh">
      <h5 class="wrapper mt-0 mb-1">Gifts</h5>
     <img class="mr-3" src="assets/images/d4.png" alt="placeholder image">
-      <p class="text-light">They can also be used to create modern  gifts to young women such as jewellery.</p>	
-    </div>
-  </li>
-  <li class="mt-0-1 vh">
-  <h5 class="mt-0 mb-1 text-light">Hand bags</h5>
-    <img class="wrapper mr-3" src="assets/images/d5.png" alt=" placeholder image">
-     <p class="text-light"> This same fabric can be used to design women handbags.</p>
-    </div>
+      <p class="text-light"> This fabric can also be used to create gifts such as jewellery.</p>	
+   
+   </li>
+    <li class="mt-0-1 vh">
+   <h5 class="mt-0 mb-1 text-light">Hand bags</h5>
+    <img class="wrappermr-3" src="assets/images/d5.png" alt=" placeholder image w-100 h-100">
+     <p class="text-light"> Different styles of handbags.</p>
   </li>
   <li class="mt-0-1 vh">
     <h5 class="mt-0 mb-1 text-light">Baby's Sling</h5>
     <img class="wrapper mr-3" src="assets/images/sling1.jpg" alt="placeholder image">
-      <p class="text-light">They are used as a sling to hold a baby across the back of a mother. 
-      They can hold the baby at the front as well, particularly when breast feeding. 
-      sometimes worn by men but often worn by women and wrapped around the chest or 
-      waist, over the head as a headscarf, or as a baby sling</p>
+      <p class="text-light">In the both the olden and modern days mothers used this fabric a sling to 
+      hold a baby across their back and the front as well, particularly when breast feeding. 
+      In some of the worm parts of Africa this fabric is sometimes worn by both men and women to wrap around their waist.
+      while the women also wrapped it on their chest during cold times or over the head as a headscarf.</p>
   </li>
 </ul>
 </div>
