--- a/gallery.html
+++ b/gallery.html
@@ -11,27 +11,39 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>African Fabric</title>
   </head>
-   <div class="col inline-block">
-     <nav class=" row  navbar navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-       <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
+   <header>
+<div class="col inline-block">
+     <nav class=" row fixed navbar navbar-light bg-light">
+  <a class="navbar-brand justify-content-end" href="index.html">
+    <img  src="assets/images/mamam.png" width="160" height="160" HOME alt="" loading="lazy" id="mama"></i>
    </a>
+   <section>
     <div>
-        <span>
-             <ul class="nav justify-content-end">
-                <li class="nav-item">
-                   <a class="nav-link active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
-             </li>
-             <li class="nav-item">
-            <a class="nav-link  active btn " title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
-            </li>
-             </ul>
-    </span>
-  </div>
-   </nav>
-  </div>
-   <body>
+         <div>
+               <span>
+                 <ul class="nav justify-content-end">
+                   <li class="nav-item">
+                   <a class="nav-link active active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
+                      </li>
+                      <li class="nav-item">
+                    <a class="nav-link active btn" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                       </li>
+                     <li class="nav-item">
+                    <a class="nav-link active btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                       </li>
+                        <li class="nav-item">
+                     <a class="nav-link btn " title="Tooltip" href="contact.html" class="hvr-sweep-to-bottom"><strong>Contact us</strong></a>
+                    </li>
+                     </ul>
+               
+               </span>
+         </div>
     </div>
+   
+   </nav>
+<div>
+</header>
+
 <div>
         <div>
             <div>
