--- a/index.html
+++ b/index.html
@@ -13,35 +13,40 @@
 <body id="bgimg">
  <header>
 <div class="col inline-block">
-     <nav class=" row  navbar navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-    <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
+     <nav class=" row fixed navbar navbar-light bg-light">
+  <a class="navbar-brand justify-content-end" href="index.html">
+    <img  src="assets/images/mamam.png" width="160" height="160" HOME alt="" loading="lazy" id="mama"></i>
    </a>
-    <nav>
-             <div class="justify-content-end">
+   <section>
+    <div>
+         <div>
+               <span>
                  <ul class="nav justify-content-end">
                    <li class="nav-item">
-                   <a class="nav-link active btn " href="fabricuses.html"><strong>Fabric use</strong></a>
+                   <a class="nav-link active active btn" href="fabricuses.html"><strong>Fabric use</strong></a>
                       </li>
+                      <li class="nav-item">
+                    <a class="nav-link active btn" title="Tooltip" href="art.html"><strong>Art work</strong></a></span>
+                       </li>
                      <li class="nav-item">
-                    <a class="nav-link btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
+                    <a class="nav-link active btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
                        </li>
-                       <li class="nav-item">
-                    <a class="nav-link btn " title="Tooltip" href="art.html"><strong>Artwork</strong></a></span>
-                       </li>
-                       <li class="nav-item">
+                        <li class="nav-item">
                      <a class="nav-link btn " title="Tooltip" href="contact.html" class="hvr-sweep-to-bottom"><strong>Contact us</strong></a>
                     </li>
                      </ul>
-             </div>
+               
+               </span>
+         </div>
+    </div>
+   
    </nav>
 <div>
 </header>
 <div class="background-image" id="bgimg">
-
 <!-- Optional: some overlay text to describe the video -->
-<div class=" hidden content">
-   <div class="hidden caption">
+<div class="centred content">
+   <div class="centered caption">
         
         <h1>AFRICAN ART & DESIGNS</h1>
         <h3>MAMA AFRIKA</h3>
