--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,13 @@
    
 <body id="bgimg2">
 <section>
- <div class="col inline-block">
-     <nav class=" row  navbar navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-      <img  src="assets/images/mamam.png" width="120" height="120" HOME alt="" loading="lazy" id="mama"></i>
+<header>
+<div class="col inline-block">
+     <nav class=" row fixed navbar navbar-light bg-light">
+  <a class="navbar-brand justify-content-end" href="index.html">
+    <img  src="assets/images/mamam.png" width="160" height="160" HOME alt="" loading="lazy" id="mama"></i>
    </a>
+   <section>
     <div>
          <div>
                <span>
@@ -32,6 +34,9 @@
                      <li class="nav-item">
                     <a class="nav-link active btn" title="Tooltip" href="gallery.html"><strong>Gallery</strong></a></span>
                        </li>
+                        <li class="nav-item">
+                     <a class="nav-link btn " title="Tooltip" href="contact.html" class="hvr-sweep-to-bottom"><strong>Contact us</strong></a>
+                    </li>
                      </ul>
                
                </span>
@@ -39,9 +44,8 @@
     </div>
    
    </nav>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    </h1>
- 
+<div>
+</header>
 <section class="container-fluid">
   <div class= "row bg-color-contact">
         <div class="col">
