--- a/art.html
+++ b/art.html
@@ -45,7 +45,7 @@
 <div class="background-image" id="bgimg1">
 <div>
     <div>
-       <h5 class="mt-0 mb-1">Wall Art</h5>
+       <h5 class="mt-0 mb-1 text-light">Wall Art</h5>
        <p class="text-light"> This image shows different pieces of artwork painted on the african fabric.</p>
     </div>
  <div>
